[project]
name = "python-rayhunter"

version = "2025.3.1"
requires-python = ">=3.11"

authors = [
  {name = "UltraSunshine", email = "python-rayhunter.hedge098@passfwd.com"},
]
maintainers = [
  {name = "UltraSunshine", email = "python-rayhunter.hedge098@passfwd.com"}
]

description = "Unofficial Python bindings for EFF's Rayhunter API"
readme = "README.md"
license-files = ["LICEN[CS]E*"]

keywords = ["rayhunter", "lte", "orbic", "qualcomm", "pcap", "qmdl"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.urls]
Homepage = "https://github.com/UltraSunshine/python-rayhunter"
Documentation = "https://python-rayhunter.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/UltraSunshine/python-rayhunter.git"
"Bug Tracker" = "https://github.com/UltraSunshine/python-rayhunter/issues"

